scripts/customer-mesh-initial/virtual-service-recommendation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
    - route:
        - destination:
            host: recommendation
            subset: v1
          weight: 33
        - destination:
            host: recommendation
            subset: v2
          weight: 33
        - destination:
            host: recommendation
            subset: v3
          weight: 34
